--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,9 +37,7 @@
   {% else %}
     {% assign title = site_title %}
   {% endif %}
-  {% if page.excerpt %}
-    {% assign description = page.excerpt | strip_html | xml_escape %}
-  {% elsif page.description %}
+  {% if page.description %}
     {% assign description = page.description | xml_escape %}
   {% else %}
     {% assign description = site_description %}
